--- a/ZhouXuanBai_News/app/src/main/res/layout/item_list.xml
+++ b/ZhouXuanBai_News/app/src/main/res/layout/item_list.xml
@@ -1,15 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/text_title"
+    android:id="@+id/item_layout"
     android:layout_width="350dp"
     android:layout_height="120dp"
     android:layout_centerHorizontal="true"
     android:layout_gravity="center_horizontal"
     android:layout_weight="1"
     android:background="@color/colorWhite"
+    android:divider="@drawable/spacer_medium"
     android:gravity="center"
-    android:text="TextView"
-    android:textSize="24sp"
-    android:textStyle="bold"
-    app:layout_anchorGravity="center_horizontal" />
+    android:onClick="newsclicked"
+    android:orientation="horizontal"
+    android:showDividers="middle">
+
+    <LinearLayout
+        android:id="@+id/image_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@mipmap/ic_launcher" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView_Title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="TextView" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_Publisher"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView_Date"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="TextView" />
+        </LinearLayout>
+
+    </LinearLayout>
+</LinearLayout>
