--- a/ZhouXuanBai_News/app/src/main/res/layout/fragment_news.xml
+++ b/ZhouXuanBai_News/app/src/main/res/layout/fragment_news.xml
@@ -203,16 +203,18 @@
                         android:textSize="18sp"
                         android:visibility="gone" />
 
+                    <Button
+                        android:id="@+id/button_edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0"
+                        android:background="?attr/colorButtonNormal"
+                        android:onClick="EditClicked"
+                        android:text="编辑"
+                        android:textSize="18sp" />
+
                 </LinearLayout>
             </HorizontalScrollView>
-
-            <Button
-                android:id="@+id/button_edit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="4.5"
-                android:onClick="EditClicked"
-                android:text="编辑" />
 
         </LinearLayout>
 
