--- a/ZhouXuanBai_News/app/src/main/res/layout/item_list.xml
+++ b/ZhouXuanBai_News/app/src/main/res/layout/item_list.xml
@@ -40,7 +40,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:gravity="center_vertical"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:text="TextView"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:gravity="center"
                 android:text="TextView" />
 
             <TextView
@@ -60,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="TextView" />
         </LinearLayout>
 
