--- a/ZhouXuanBai_News/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ZhouXuanBai_News/app/src/main/res/menu/activity_main_drawer.xml
@@ -30,9 +30,9 @@
 
                 android:title="@string/menu_night" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_history"
 
-                android:title="@string/menu_send" />
+                android:title="@string/menu_history" />
             <!--                android:icon="@drawable/ic_menu_send"-->
         </menu>
     </item>
