--- a/ZhouXuanBai_News/app/src/main/res/navigation/mobile_navigation.xml
+++ b/ZhouXuanBai_News/app/src/main/res/navigation/mobile_navigation.xml
@@ -36,8 +36,8 @@
         tools:layout="@layout/fragment_night" />
 
     <fragment
-        android:id="@+id/nav_send"
-        android:name="com.java.ZhouXuanBai.ui.send.SendFragment"
-        android:label="@string/menu_send"
-        tools:layout="@layout/fragment_send" />
+        android:id="@+id/nav_history"
+        android:name="com.java.ZhouXuanBai.ui.history.HistoryFragment"
+        android:label="@string/menu_history"
+        tools:layout="@layout/fragment_history" />
 </navigation>
