更新搜索栏

--- a/ZhouXuanBai_News/app/src/main/res/layout/activity_show_news.xml
+++ b/ZhouXuanBai_News/app/src/main/res/layout/activity_show_news.xml
@@ -26,18 +26,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:divider="@drawable/spacer_medium"
+            android:orientation="vertical"
+            android:showDividers="middle">
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="1" />
+                android:gravity="center"
+                android:text="1"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="2" />
 
             <TextView
