--- a/ZhouXuanBai_News/app/src/main/res/layout/activity_show_news.xml
+++ b/ZhouXuanBai_News/app/src/main/res/layout/activity_show_news.xml
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="@color/buttonColor"
+        app:srcCompat="@drawable/share_48px" />
 
     <ScrollView
         android:layout_width="match_parent"
