--- a/ZhouXuanBai_News/app/src/main/res/layout/item_list.xml
+++ b/ZhouXuanBai_News/app/src/main/res/layout/item_list.xml
@@ -41,7 +41,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:paddingLeft="40dp"
+            android:paddingLeft="0dp"
             android:paddingRight="40dp"
             android:text="TextView"
             android:textSize="18sp"
@@ -58,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:text="TextView" />
 
             <TextView
